# waterjet_pred_valencia

./: .gitignore  AGENTS.md  README.md  plotting.py  pyproject.toml  pytest.ini  run_simulation.py  waterjet_pred_valencia.py
.agents/: project.md
.agents/references/: editing.md  python.md  validation.md
.opencode/: opencode.jsonc
doc/: example_plot.html
model/: parameters.py  rearrange.py  simulator.py
src/waterjet_pred_valencia/: cli.py  jet_state.py  logging.py  parameters.py  plotting.py  rearrange.py  simulator.py  tracer.py
src/waterjet_pred_valencia/plotting/: __init__.py  api.py  constants.py  helpers.py  panels.py  render.py  session.py  source.py  style.py  types.py
tests/: test_cli.py  test_plotting.py  test_plotting_session.py  test_prediction_valencia.py  test_tracer.py
waterjet_pred_valencia/: cli.py  parameters.py  plotting.py  rearrange.py  simulator.py
